# zs4procext

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
src/zs4procext/: actions.py  classifier.py  embeddings.py  evaluator.py  evaluator_graphs.py  extractor.py  llm.py  parser.py  parser_graphs.py  prompt.py  randomization.py  test2.ipynb
src/zs4procext/cli/: __init__.py  data.py  eval_actions.py  eval_classifier.py  eval_graphs.py  eval_molar_ratio.py  eval_sample_finder.py  eval_table_extractor.py  image2data.py  image2embeddings.py  paragraph_classifier.py  parser_graph_test.py  prompt_template_creator.py  table2data.py  text2actions.py  text2molar_ratio.py  text2samples.py
src/zs4procext/resources/: add2_chemicals_from_actions_schema.json  chemicals_from_actions_schema.json  classify_ftiv_pyridine_schema.json  classify_material_preparation_schema.json  classify_multi_sample_schema.json  classify_n2_physisorption_schema.json  deepseek_chat_default_instruct_template.json  find_samples_procedures_schema.json  gemma-3_default_instruct_template.json  gemma_default_it_template.json  glm_default_instruct_template.json  ibm_granite3_default_template.json  ibm_granite_default_template.json  idefics3_llama_default_instruct_template.json  image_extraction_schema.json  internvl_default_instruct_template.json  kunoichi-dp_default_chat_template.json  llama2_default_chat_template.json  llama31_default_instruct_template.json  llama3_default_instruct_template.json  llava-onevision-qwen_default_instruct_template.json  llava1.5_default_template.json  material_synthesis_actions_schema.json  minicpm_default_instruct_template.json  mistral_default_template.json  mistral_instruct_default_template.json  molmo_default_instruct_template.json  mpt_default_chat_template.json  mpt_default_template.json  open_chat_3.6_default_template.json  open_chat_default_template.json  open_llama_default_template.json  organic_synthesis_actions_first_template.json  organic_synthesis_actions_last_template.json  organic_synthesis_actions_schema.json  ovis_chat_default_instruct_template.json  ovis_default_instruct_template.json  phi3_default_instruct_template.json  phi4_default_instruct_template.json  phi4_text_default_instruct_template.json  (+19 more)
src/zs4procext/resources/datasets/: 110_zeolite_recipes.txt  actions_110_test_zeolite_recipes.txt
src/zs4procext/resources/example/: example.ipynb  example.py  model_parameters.json  parser_parameters.json  prompt_schema.json
src/zs4procext/resources/example/inference/: Llama-70B_inference_example.json  Llama-70B_response_chemicals.json  Llama-7B_inference_example.json  Mistral-7B-Instruct_inference_example.json  Vicuna-33B_inference_example.json
src/zs4procext/resources/model_parameters/: beam_search_n_5.json
src/zs4procext/resources/parsing_parameters/: synthesis_parsing_parameters.json
src/zs4procext/resources/schemas/: add2_chemicals_from_actions_schema.json  classify_desilication_dealumination_schema.json  classify_multi_sample_schema.json  image_extraction_schema.json  material_synthesis_actions_schema.json  organic_synthesis_actions_schema.json  sac_synthesis_actions_schema.json  wash_chemicals_from_actions_schema.json
src/zs4procext/resources/template/: gemma_default_it_template.json  ibm_granite_default_template.json  internvl_default_instruct_template.json  kunoichi-dp_default_chat_template.json  llama2_default_chat_template.json  llama31_default_instruct_template.json  llama3_default_instruct_template.json  mistral_instruct_default_template.json  molmo_default_instruct_template.json  mpt_default_chat_template.json  mpt_default_template.json  organic_synthesis_actions_first_template.json  phi3_default_instruct_template.json  phi4_default_instruct_template.json  phi_default_instruct_template.json  qwen1.5_default_chat_template.json  qwen_default_instruct_template.json  smolvlm2_default_instruct_template.json  solar_default_template.json  vicuna_default_chat_template.json  wizardlm-2_default_template.json
src/zs4procext/resources/tests/: evaluation_test.txt
tests/: __init__.py  test_actions.py  test_evaluator.py  test_llm.py  test_parser.py  test_prompt.py  test_randomization.py
