[build-system]
requires = ["setuptools >= 59.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "torch.*",
    "click.*",
    "langchain.*",
    "pydantic.*",
    "importlib_resources.*",
    "vllm.*",
    "trieregex.*",
    "pint.*",
    "quantulum3.*",
    "Levenshtein.*"
]
ignore_missing_imports = true
