[metadata]
name = zs4procext
version = attr: zs4procext.__version__
description = Zero-shot LLM prompting for procedure extraction
author = Daniel Pereira Costa
author_email = daniel.pereira.costa@tecnico.ulisboa.pt
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TBD
project_urls =
    Documentation = TBD
    Repository = https://github.com/Pocoyo7798/zs4procext
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
zip_safe = False
include_package_data = True
install_requires =
    langchain<=0.1.16
    numpy<=1.26.4
    torch<=2.3.0
    click<=8.1.7
    pydantic<=2.7.3
    importlib_resources<=6.4.0
    trieregex<=1.0.0
    pint<=0.23
    quantulum3<=0.9.1
    Levenshtein<=0.12.0
    scipy<=1.13.0
    beautifulsoup4<=4.12.3
    joblib<=1.4.0
    scikit-learn<=1.4.2
    langchain-community<=0.0.33
    stemming<=1.0.1



[options.entry_points]
console_scripts=
    zs4procext-data-visual = zs4procext.cli.data:main
    zs4procext-prompt-template-creator = zs4procext.cli.prompt_template_creator:main
    zs4procext-text2actions = zs4procext.cli.text2actions:main
    zs4procext-eval_actions = zs4procext.cli.eval_actions:main
    zs4procext-text2samples = zs4procext.cli.text2samples:main

[options.packages.find]
where = src

[options.package_data]
zs4procext =
    py.typed
    resources/organic_synthesis_actions_schema.json
    resources/organic_synthesis_actions_first_template.json
    resources/organic_synthesis_actions_last_template.json
    resources/vllm_default_params.json
    resources/Llama-7B_inference_example.json
    resources/Llama-70B_inference_example.json
    resources/Mistral-7B-Instruct_inference_example.json
    resources/Vicuna-33B_inference_example.json
    resources/synthesis_parsing_parameters.json
    resources/chemicals_from_actions_schema.json
    resources/Llama-70B_response_chemicals.json
    resources/evaluation_test.txt
    resources/llama2_default_chat_template.json
    resources/vicuna_default_chat_template.json
    resources/mistral_default_template.json 
    resources/mistral_instruct_default_template.json
    resources/open_llama_default_template.json
    resources/mosaicml/mpt_default_chat_template.json
    resources/mpt_default_template.json
    resources/find_samples_procedures_schema.json
    resources/llama3_default_instruct_template.json
    resources/material_synthesis_actions_schema.json
    resources/open_chat_3.6_default_template.json
    resources/phi_default_instruct_template.json
    resources/qwen1.5_default_chat_template.json
    resources/starlinglm_default_template.json
    resources/kunoichi-dp_default_chat_template.json
    resources/zephyr_default_chat_template.json
    resources/gemma_default_it_template.json
    resources/wizardlm-2_default_template.json


[options.extras_require]
dev =
    black>=23.1.0
    bump2version>=1.0.1
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
    pre-commit>=3.0.4

vllm =
    vllm<=0.5.0

[flake8]
extend-ignore = E203, E501
