[metadata]
name = zs4procext
version = attr: zs4procext.__version__
description = Zero-shot LLM prompting for procedure extraction
author = Daniel Pereira Costa
author_email = daniel.pereira.costa@tecnico.ulisboa.pt
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TBD
project_urls =
    Documentation = TBD
    Repository = https://github.com/Pocoyo7798/zs4procext
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
zip_safe = False
include_package_data = True
install_requires =
    langchain<=0.3.25
    numpy<=1.26.4
    click<=8.1.7
    pydantic<=2.11.5
    importlib_resources<=6.4.0
    trieregex<=1.0.0
    pint<=0.23
    quantulum3<=0.9.1
    levenshtein<=0.26.0
    scipy<=1.13.0
    beautifulsoup4<=4.12.3
    joblib<=1.4.0
    scikit-learn<=1.4.2
    langchain-community<=0.3.23
    stemming<=1.0.1
    pandas<=2.2.2
    openpyxl<=3.1.5
    pillow<=11.0.0
    vllm<=0.8.3
    flashinfer-python<=0.2.5

[options.entry_points]
console_scripts=
    zs4procext-data-visual = zs4procext.cli.data:main
    zs4procext-prompt-template-creator = zs4procext.cli.prompt_template_creator:main
    zs4procext-text2actions = zs4procext.cli.text2actions:main
    zs4procext-eval_actions = zs4procext.cli.eval_actions:main
    zs4procext-text2samples = zs4procext.cli.text2samples:main
    zs4procext-text2molar_ratios = zs4procext.cli.text2molar_ratio:main
    zs4procext-eval_molar_ratio = zs4procext.cli.eval_molar_ratio:main
    zs4procext-paragraph_classifier = zs4procext.cli.paragraph_classifier:main
    zs4procext-eval_classifier = zs4procext.cli.eval_classifier:main
    zs4procext-table2data = zs4procext.cli.table2data:main
    zs4procext-eval_sample_finder = zs4procext.cli.eval_sample_finder:main
    zs4procext-eval_graphs = zs4procext.cli.eval_graphs:main
    zs4procext-image2data = zs4procext.cli.image2data:main
    zs4procext-image2embeddings = zs4procext.cli.image2embeddings:main
    

[options.packages.find]
where = src

[options.package_data]
zs4procext =
    py.typed
    resources/template/organic_synthesis_actions_schema.json
    resources/template/organic_synthesis_actions_first_template.json
    resources/template/organic_synthesis_actions_last_template.json
    resources/model_parameters/vllm_default_params.json
    resources/example/inference/Llama-7B_inference_example.json
    resources/example/inference/Llama-70B_inference_example.json
    resources/example/inference/Mistral-7B-Instruct_inference_example.json
    resources/example/inference/Vicuna-33B_inference_example.json
    resources/parsing_parameters/synthesis_parsing_parameters.json
    resources/schemas/chemicals_from_actions_schema.json
    resources/example/inferenceLlama-70B_response_chemicals.json
    resources/tests/evaluation_test.txt
    resources/template/llama2_default_chat_template.json
    resources/template/vicuna_default_chat_template.json
    resources/template/mistral_default_template.json 
    resources/template/mistral_instruct_default_template.json
    resources/template/open_llama_default_template.json
    resources/template/mosaicml/mpt_default_chat_template.json
    resources/template/mpt_default_template.json
    resources/schemas/find_samples_procedures_schema.json
    resources/template/llama3_default_instruct_template.json
    resources/schemas/material_synthesis_actions_schema.json
    resources/template/open_chat_3.6_default_template.json
    resources/template/phi_default_instruct_template.json
    resources/template/qwen1.5_default_chat_template.json
    resources/template/starlinglm_default_template.json
    resources/template/kunoichi-dp_default_chat_template.json
    resources/template/zephyr_default_chat_template.json
    resources/template/gemma_default_it_template.json
    resources/template/wizardlm-2_default_template.json
    resources/template/ibm_granite_default_template.json
    resources/template/lama31_default_instruct_template.json
    resources/template/solar_default_template.json
    resources/schemas/classify_multi_sample_schema.json
    resources/template/llava1.5_default_template.json
    resources/schemas/table_extraction_schema.json
    resources/template/ibm_granite3_default_template.json
    resources/template/deepseek_chat_default_instruct_template.json
    resources/schemas/transfer_schema.json
    resources/schemas/image_extraction_schema.json
    resources/template/ovis_default_instruct_template.json
    resources/template/qwen_default_instruct_template.json
    resources/template/phi3_default_instruct_template.json
    resources/template/pixtral-12b_default_instruct_template.json
    resources/template/internvl_default_instruct_template.json
    resources/template/minicpm_default_instruct_template.json
    resources/template/smolvlm2_default_instruct_template.json
    resources/template/gemma-3_default_instruct_template.json
    resources/template/glm_default_instruct_template.json
    resources/template/idefics3_llama_default_instruct_template.json
    resources/template/molmo_default_instruct_template.json
    resources/template/phi4_default_instruct_template.json
    resources/template/llava-onevision-qwen_default_instruct_template.json
    resources/template/phi4_text_default_instruct_template.json
    resources/schemas/classify_desilication_dealumination_schema.json
    resources/schemas/wash_chemicals_from_actions_schema.json
    resources/schemas/solution2_chemicals_from_actions_schema.json
    resources/schemas/sac_synthesis_actions_schema.json
    resources/schemas/add2_chemicals_from_actions_schema.json






[options.extras_require]
dev =
    black>=23.1.0
    bump2version>=1.0.1
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
    pre-commit>=3.0.4

[flake8]
extend-ignore = E203, E501
